apps/web/src/style/main.css
@import './components/button.css';
@import './components/input.css';

#root {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex;
  flex-flow: column;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  height: 100vh;
  max-height: 100vh;
  background-color: var(--color-gray-100);
}

a {
  font-size: var(--text-sm);
  color: var(--color-primary);
}

#index-image {
  background: url('/bg-image.jpg');
  filter: grayscale();
  background-size: cover;
  background-position-x: -50px;
}

.token-value {
  font-family: Playfair;
}

@media screen and (min-width: 600px) {
  body {
    padding: 0 --spacing(16);
  }
}

@media screen and (min-width: 850px) {
  body {
    padding: 0 --spacing(32);
  }
}

@media screen and (min-width: 950px) {
  body {
    padding: 0 --spacing(48);
  }
}

@media screen and (min-width: 1100px) {
  body {
    padding: 0 --spacing(64);
  }
}

@media screen and (min-width: 1200px) {
  body {
    padding: 0 --spacing(92);
  }
}

@keyframes SlideUp {
  0% {
    transform: translateY(-50px);
  }

  100% {
    transfrom: translateY(0);
  }
}

@keyframes SlideRight {
  0% {
    opacity: 0;
    transform: translateX(-50px);
  }

  0% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes ScaleIn {
  from {
    opacity: 0;
    transform: scale(0.92);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

